# qt-source-build-example

./: .gitmodules  CMakeLists.txt
scripts/: build_windows.bat
src/: CMakeLists.txt  abstractviewer.h  main.cpp  mainwindow.cpp
